[project]
name = "lev.networkbusters.john_the_ripper"
version = "0.1.15"
description = ""
dynamic = ["classifiers"]
requires-python = ">=3.10"
dependencies = [
    "levrt~=1.3",
]

[[project.authors]]
name = "GQW19"
email = ""

[project.license]
text = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
editable-backend = "path"
includes = ["lev"]

[[tool.pdm.source]]
name = "levhub"
url = "https://__token__:${LEVHUB_TOKEN}@pypi.lev.zone/simple/"
